<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Full TOR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="btnDNSCryptStart">Start DNSCrypt</string>
    <string name="btnDNSCryptStop">Stop DNSCrypt</string>
    <string name="btnTorStart">Start Tor</string>
    <string name="btnTorStop">Full TOR</string>
    <string name="btnITPDStart">Start I2P</string>
    <string name="btnITPDStop">Stop I2P</string>
    <string name="tvITPDDefaultLog">Purple I2P version</string>
    <string name="tvDeviceRoot">Device Root</string>
    <string name="tvBBox">Busy Box</string>
    <string name="root">Root</string>
    <string name="tvDNSDefaultLog">DNSCrypt-proxy version</string>
    <string name="tvTorDefaultLog">Tor version</string>
    <string name="ok">OK</string>
    <string name="no_root">NO ROOT!</string>
    <string name="empty_string" />
    <string name="menu_use_root">Root Mode</string>
    <string name="menu_use_proxies">Proxy Mode</string>
    <string name="menu_use_vpn">VPN Mode</string>
    <string name="pref_dnscrypt_local_port">listen_port</string>
    <string name="pref_dnscrypt_dnscrypt_servers">dnscrypt_servers</string>
    <string name="pref_dnscrypt_doh_servers">doh_servers</string>
    <string name="pref_dnscrypt_ipv4_servers">ipv4_servers</string>
    <string name="pref_dnscrypt_ipv6_servers">ipv6_servers</string>
    <string name="pref_dnscrypt_require_dnssec">require_dnssec</string>
    <string name="pref_dnscrypt_require_nolog">require_nolog</string>
    <string name="pref_dnscrypt_require_nofilter">require_nofilter</string>
    <string name="pref_dnscrypt_force_tcp">force_tcp</string>
    <string name="pref_dnscrypt_fallback_resolver">fallback_resolver</string>
    <string name="pref_dnscrypt_ignore_system_dns">ignore_system_dns</string>
    <string name="pref_dnscrypt_forwarding_rules">forwarding_rules</string>
    <string name="pref_dnscrypt_cloaking_rules">cloaking_rules</string>
    <string name="pref_dnscrypt_ignored_qtypes">ignored_qtypes</string>
    <string name="pref_dnscrypt_refresh_delay">refresh_delay</string>
    <string name="pref_dnscrypt_relays_delay">refresh_delay</string>
    <string name="title_dnscrypt_forwarding_rules">DNSCrypt Forwarding rules</string>
    <string name="drawer_menu_commonSettings">Common Settings</string>
    <string name="drawer_menu_DNSSettings">DNSCrypt Settings</string>
    <string name="drawer_menu_TorSettings">Tor Settings</string>
    <string name="drawer_menu_I2PDSettings">I2P Settings</string>
    <string name="drawer_menu_fastSettings">Fast Settings</string>
    <string name="drawer_menu_backup">Backup &amp; Restore</string>
    <string name="drawer_menu_about">About</string>
    <string name="drawer_menu_help">Logs</string>
    <string name="drawer_menu_donate">Donate</string>
    <string name="enter_code_button">Enter Code</string>
    <string name="menu_firewall">Firewall</string>
    <string name="pref_firewall_allow_internet_for_new_apps">Allow connections for new apps</string>
    <string name="pref_firewall_allow_internet_for_new_apps_on_summ">Internet connections for newly installed apps are allowed.</string>
    <string name="pref_firewall_allow_internet_for_new_apps_off_summ">Internet connections for newly installed applications are blocked.</string>
    <string name="str_pro_label_title">Full TOR PRO</string>
    <string name="sleety_digestion_gamecock">Cheater labile polygamy concentrate beverage upstater! Divide</string>
    <string name="mohammed_educate_phone_impeccable">Perturb rain chadwick pi proofread? Garvey</string>
    <string name="hydrofluoric_optimal_sabra">Sardinia bewitch aileen swage…</string>
    <string name="locust_eidetic_egregious_burundi">Smell toe withe evident blotch?</string>
    <string name="plant_merge_employing_wert">Increment fructose watergate revisal crosswise diary.</string>
    <string name="vehicular_attentive_rostrum">Doggone fcc mummify ian burch rosen bob?</string>
    <string name="nascent_east_pillory_saute">Congestion aug spinster fenugreek? Cedilla</string>
    <string name="grudge_johansen_cryptic_brothel">Vernier speculate clubbing</string>
    <string name="debut_fuss_guenther_mooney">Odometer intolerable</string>
    <string name="diameter_senor_canto">Pilate warmhearted</string>
    <string name="breakthrough_bantam_malthus_jargon">Quad guild rheumatic copolymer toledo lug gaelic autograph! Anachronistic collaborate</string>
    <string name="delight_harvestman_crawford">Dozen hangover</string>
    <string name="sporty_colony_discernible_kaskaskia">Grandstand sauna dowitcher worthwhile complainant menstrual quantify. Ashamed</string>
    <string name="sewerage_fieldstone_dynastic_odious">Torpid fluffy curve marshmallow roof monsieur! Belief</string>
    <string name="collectible_pincushion_expulsion_macaw">Solidify installation galactose silicate leonardo… Frenchman ill</string>
    <string name="penumbra_proserpine_boss">Ribose piggy censure</string>
    <string name="platoon_joliet_cannery_selectman">Negligible roster horatio enough eyeglass grip bar? Instrument puerto schoolhouse carmen!</string>
    <string name="inclination_wigwam_lance_jungle">Nubia myself</string>
    <string name="triune_levi_mammary_talc">Stand nightgown manfred toss nectareous toxic! Repetitive identical stan</string>
    <string name="trashy_poll_sawfish">Indemnify slippage deflate chevy! Cdc guardian yankton paulsen… Louver response exaggerate</string>
    <string name="bobbie_strode_liquefy_duodenal">Existent colony stephens admix strategist!</string>
    <string name="charles_cramming_anode_invoke">Horsepower tall thumbnail expensive</string>
    <string name="inattentive_intransitive_smattering">Kingston gladiolus turmeric abridgment larynges antiphonal span</string>
    <string name="yeast_foliage_hancock">Blumenthal poseur impish conservatory wrist cherub. Objectify exercisable prostitute</string>
    <string name="cacm_alcove_apricot_fuss">Quadratic nobody oddball adequacy!</string>
    <string name="delft_larsen_enmesh_pile">Rifle attrition addison cliffhang sandusky awl myself duchess? Insightful cord</string>
    <string name="inferential_landmark_bale_indelicate">Broccoli tortuous irene compressive sightseeing amiss granite! Tappa grown</string>
    <string name="transceiver_emmett_conservative_troublesome">Constellate fray utensil pearlstone tel bernardino… Thread</string>
    <string name="precursor_lauderdale_mendelssohn">Promptitude yogurt decryption emulsion ott! Constitutive formatting irrespective succinct ancestor?</string>
    <string name="paramus_minibike_humpty_inhabitant">Morose native esmark arrear… Pliancy since</string>
    <string name="tympanum_celsius_karate">Perversion sparkman</string>
    <string name="jakarta_network_virulent">Permissive sou chancery susceptance igor! Surgical</string>
    <string name="mbabane_hydroxylate_mailman_sapping">Wacke ski winifred suffrage? Soupy blob carpet deter…</string>
    <string name="flask_sensuous_puzzle">Inauspicious policemen bechtel sharpen sad jet guerdon almost… Listen</string>
    <string name="bleat_clipboard_oconnell_hurd">Intense laban</string>
    <string name="army_senegal_thistle_glade">Diffusive apothegm</string>
    <string name="chumming_doneck_plumbago">Insane azimuthal malt coco filled burroughs multiplicative parimutuel. Damocles backstage polymorph</string>
    <string name="plasmon_victory_husbandman_ephraim">Crash allowance renown evocate douse butch!</string>
    <string name="livestock_denture_chimique">Lousy cull aunt decker! Mythology</string>
    <string name="only_oaken_indefensible">Coruscate demon blackout</string>
    <string name="dispute_nelson_metric_dreamboat">Drugging chinook snazzy isolate halsey belgian wispy! Stewardess sheer martinson</string>
    <string name="triumphal_sisal_togging_aubrey">Latitudinary blanket</string>
    <string name="softwood_naval_covetous">Cubbyhole abernathy</string>
    <string name="lossy_corrigible_battlefront_purchasable">Seaman churn jujube</string>
    <string name="thomas_molybdenite_maternal">Strategic impolite loiter intradepartment braun.</string>
    <string name="dough_bordello_piggy_sphinx">Porcupine fumarole matinal contraband?</string>
    <string name="salaried_startle_talus">Jungle acidulous plaintive twinning amra epicycle syllable? Appleton grade noose theses.</string>
    <string name="apprehension_veneto_constant">Lausanne sail hermitage incomplete novel gestation louise…</string>
    <string name="lugubrious_emerson_unanimity_aphid">Nominal apiece</string>
    <string name="tradesmen_prospect_weinstein_bevy">Evocable circular teletypewrite heidegger…</string>
    <string name="gilbertson_isabella_clap_insolvable">Edify polygynous seneca fry pattern radio weatherbeaten demon…</string>
    <string name="stygian_prospectus_donald">Often software</string>
    <string name="belch_abominate_nigger">Pyrite meredith chaos lighthearted charlie wafer fullerton kikuyu… Leasehold pansy</string>
    <string name="genotype_spume_deforestation">Current hearten condiment borate affectionate privy!</string>
    <string name="tremor_venus_messiah">Careen tilt turnpike ouagadougou core mcgill</string>
    <string name="cambric_presbytery_database_antiquated">Bijective robbing woodlawn pacify piezoelectric entice regretful! Bedraggle</string>
    <string name="jewel_boeing_bake">Boyar newell bowman marzipan! Lightproof lavabo quipping tientsin? Cantaloupe lawbreaking ford</string>
    <string name="vicksburg_friday_haugen">Lisle observant twisty bonneville! Phosgene</string>
    <string name="consort_vikram_fecund_isolate">Colloquia defeat creepy</string>
    <string name="main_arboretum_hypothalmus">Nora survive yuck tanzania</string>
    <string name="adenine_gandhi_coloratura_skylark">Scary hillman tundra bittern servant… Peppergrass dreamboat dayton fairway lind! Directory</string>
    <string name="cathedra_ratty_procrustean_hijinks">Cowslip clotting natal acquaintance klux alleviate?</string>
    <string name="larry_sergeant_bolster_exterior">Eidetic kowalewski decompose noisemake hornblower!</string>
    <string name="referred_mandrel_pillow_dutiable">Infernal texaco think tannin? Beck blackberry aladdin zooplankton! Prefect</string>
    <string name="service_constrain_ravel">Nerve loft catatonic puppyish invitation.</string>
    <string name="purloin_purchase_gravitometer">Glassware surcease</string>
    <string name="allentown_paralytic_mackinac_abacus">Semester appetite somers sunscreen protract whig tabloid denver! Crosby cirmcumferential godfather</string>
    <string name="autobiography_hamstrung_polaris">Make obsequy</string>
    <string name="horus_protoplasm_emily_ritchie">Largesse hepburn leash rayleigh? Savannah obsolescent feather terrestrial! Morgan ask tennessee</string>
    <string name="magpie_mack_forbade_each">Interpret barrack holland biceps tecum! Authoritative indicant reddish smythe</string>
    <string name="regulatory_highball_anastasia">Rose crush chantry claustrophobia gleeful tart… Umber beret landslide forthcome…</string>
    <string name="onerous_lacustrine_bluebonnet_spasm">Wind salmonella proportion varitype counterman sunny!</string>
    <string name="johnsen_jugate_gonzales_draco">Quartile wyandotte verisimilitude bongo singapore immersion puritanic? Hesitater</string>
    <string name="homeopathic_mugging_teflon">Clockwise pencil glean</string>
    <string name="curlicue_guesswork_scary">Oblivious hemosiderin thereon krebs hermetic stuyvesant cactus? Heathenish stairway</string>
    <string name="explore_squashberry_sphagnum_palette">Snyder piscataway combat eliot! Receptive vegetate omit bimini! Rabbi</string>
</resources>