<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!--
  ~ Copyright (c) 2022 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
    <TextView android:hint="@string/diameter_senor_canto" android:id="@+id/violateView" android:layout_height="wrap_content" android:layout_width="@dimen/triphenylphosphine_skit_height" android:text="@string/debut_fuss_guenther_mooney" android:textColor="@color/snip_diagnose" app:layout_constraintBottom_toTopOf="@id/surahLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout android:gravity="center_horizontal|end" android:id="@+id/surahLayout" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/violateView">
        <CheckBox android:background="@color/floury_asteroid" android:hint="@string/penumbra_proserpine_boss" android:id="@+id/punctuateView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/delight_harvestman_crawford" android:textColor="#E61553"/>
        <AutoCompleteTextView android:background="@color/eurasia_corinth" android:hint="@string/tympanum_celsius_karate" android:id="@+id/johannView" android:layout_height="wrap_content" android:layout_margin="@dimen/vellum_challenge_width" android:layout_width="wrap_content" android:text="@string/inattentive_intransitive_smattering"/>
        <AutoCompleteTextView android:background="#E9163C" android:hint="@string/consort_vikram_fecund_isolate" android:id="@+id/bohemiaView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/autobiography_hamstrung_polaris" android:textColor="@color/hermit_descartes_plan"/>
        <CheckBox android:background="#271C0E" android:hint="@string/softwood_naval_covetous" android:id="@+id/jeroboamConnectorView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/purloin_purchase_gravitometer" android:textColor="@color/multiplicity_stenographer_anemone" android:textSize="@dimen/cancel_curry_textsize"/>
        <Button android:background="@color/armistice_applied" android:hint="@string/gilbertson_isabella_clap_insolvable" android:id="@+id/keatonView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="@dimen/disturbance_strand_width" android:paddingEnd="@dimen/waybill_gaberones_height" android:paddingStart="@dimen/patrimony_torque_height" android:paddingTop="24dp" android:text="@string/flask_sensuous_puzzle" android:textColor="#84EA2F5F" android:textSize="@dimen/invest_bridle_textsize"/>
        <CheckedTextView android:background="#6F0FB9" android:hint="@string/livestock_denture_chimique" android:id="@+id/sandyView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/locust_eidetic_egregious_burundi" android:textColor="@color/waterfowl_cash_residue"/>
        <AutoCompleteTextView android:hint="@string/jewel_boeing_bake" android:id="@+id/ostracismView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/inferential_landmark_bale_indelicate" android:textSize="@dimen/cortland_ascertain_textsize"/>
        <CheckBox android:background="#87FADBE2" android:hint="@string/dispute_nelson_metric_dreamboat" android:id="@+id/macintoshPullView" android:layout_height="wrap_content" android:layout_margin="@dimen/roister_baton_padding" android:layout_width="wrap_content" android:text="@string/magpie_mack_forbade_each" android:textColor="@color/smallpox_respire_mcdaniel"/>
        <EditText android:background="@color/paraxial_tungsten_orchid" android:hint="@string/salaried_startle_talus" android:id="@+id/forteBonaventureView" android:inputType="phone" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/inclination_wigwam_lance_jungle" android:textColor="@color/connoisseur_stablemen"/>
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/ethicLayout" android:layout_height="wrap_content" android:layout_width="match_parent">
            <AutoCompleteTextView android:hint="@string/adenine_gandhi_coloratura_skylark" android:id="@+id/wingspreadView" android:layout_height="wrap_content" android:layout_width="938dp" android:paddingBottom="14dp" android:paddingEnd="12dp" android:paddingStart="@dimen/inmate_viewport_padding" android:paddingTop="@dimen/lounsbury_sleek_height" android:text="@string/curlicue_guesswork_scary" android:textColor="#673ADE00" android:textSize="@dimen/neon_pope_textsize" app:layout_constraintBottom_toTopOf="@id/bloodstreamView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
            <CheckedTextView android:hint="@string/nascent_east_pillory_saute" android:id="@+id/bloodstreamView" android:layout_height="wrap_content" android:layout_margin="@dimen/waitress_affine" android:layout_width="0dp" android:text="@string/cathedra_ratty_procrustean_hijinks" android:textColor="@color/dream_tilde" android:textSize="@dimen/brandenburg_contractual_textsize" app:layout_constraintBottom_toTopOf="@id/betteView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/wingspreadView"/>
            <CheckedTextView android:hint="@string/cacm_alcove_apricot_fuss" android:id="@+id/betteView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/triumphal_sisal_togging_aubrey" android:textColor="@color/pitt_pitfall_genevieve" app:layout_constraintBottom_toTopOf="@id/protozoanLowboyView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/bloodstreamView"/>
            <AutoCompleteTextView android:hint="@string/horus_protoplasm_emily_ritchie" android:id="@+id/protozoanLowboyView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/grudge_johansen_cryptic_brothel" android:textColor="#D608324F" app:layout_constraintBottom_toTopOf="@id/altoView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/betteView"/>
            <EditText android:background="#7E10187B" android:hint="@string/larry_sergeant_bolster_exterior" android:id="@+id/altoView" android:inputType="textCapWords" android:layout_height="wrap_content" android:layout_width="796dp" android:text="@string/bobbie_strode_liquefy_duodenal" android:textColor="@color/guesswork_pertain" android:textSize="@dimen/cancel_curry_textsize" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/protozoanLowboyView"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <CheckedTextView android:background="@color/bivariate_afrikaner" android:hint="@string/chumming_doneck_plumbago" android:id="@+id/coalescentBotanistView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingEnd="@dimen/woodard_altogether_width" android:paddingStart="@dimen/nobel_predictor_size" android:paddingTop="@dimen/bushwhack_matchmake_margin" android:text="@string/trashy_poll_sawfish" android:textColor="@color/fortin_hurt" android:textSize="@dimen/alice_drawn_textsize"/>
        <Button android:background="@color/taxonomy_utterance" android:hint="@string/precursor_lauderdale_mendelssohn" android:id="@+id/inauspiciousView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/breakthrough_bantam_malthus_jargon" android:textSize="14sp"/>
        <CheckBox android:background="@color/worse_boon" android:hint="@string/tradesmen_prospect_weinstein_bevy" android:id="@+id/stellaTokamakView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/dough_bordello_piggy_sphinx" android:textColor="@color/posey_acquittal" android:textSize="@dimen/blank_repressive_textsize"/>
        <EditText android:background="@color/scourge_switchman_perfect" android:hint="@string/yeast_foliage_hancock" android:id="@+id/polloiView" android:inputType="textPassword" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/bleat_clipboard_oconnell_hurd" android:textColor="#FAA6E204"/>
        <Button android:background="@color/receptacle_molybdate_hither" android:hint="@string/delft_larsen_enmesh_pile" android:id="@+id/thunderclapView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/sewerage_fieldstone_dynastic_odious" android:textColor="@color/bourbon_sixteenth_helpful"/>
        <EditText android:background="@color/plenary_jabbing_pinning" android:hint="@string/only_oaken_indefensible" android:id="@+id/friedmanHousewivesView" android:inputType="textPassword" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/homeopathic_mugging_teflon" android:textColor="@color/solution_milieu_hangover"/>
        <CheckBox android:hint="@string/hydrofluoric_optimal_sabra" android:id="@+id/grillView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/lossy_corrigible_battlefront_purchasable" android:textSize="@dimen/ullman_christopher_textsize"/>
        <CheckBox android:background="@color/pageantry_zimmerman_benares" android:hint="@string/sporty_colony_discernible_kaskaskia" android:id="@+id/tomeView" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingBottom="@dimen/ridding_rerouting_padding" android:text="@string/regulatory_highball_anastasia" android:textColor="@color/decease_perversion"/>
        <TextView android:background="@color/epicure_wilderness_muddlehead" android:hint="@string/paramus_minibike_humpty_inhabitant" android:id="@+id/dinnertimeMaltaView" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/subtrahend_phthalate_height" android:layout_marginStart="26dp" android:layout_marginTop="@dimen/ytterbium_rabid" android:layout_width="wrap_content" android:text="@string/main_arboretum_hypothalmus"/>
        <CheckedTextView android:background="#507D8D" android:hint="@string/mbabane_hydroxylate_mailman_sapping" android:id="@+id/umlautView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/belch_abominate_nigger" android:textColor="@color/notocord_greater"/>
        <CheckedTextView android:background="#69FA4C" android:hint="@string/plant_merge_employing_wert" android:id="@+id/exorciseView" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingBottom="26dp" android:paddingTop="@dimen/millisecond_remus_width" android:text="@string/platoon_joliet_cannery_selectman"/>
        <AutoCompleteTextView android:background="#74CD9397" android:hint="@string/mohammed_educate_phone_impeccable" android:id="@+id/minibikeAbysmalView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/vehicular_attentive_rostrum" android:textColor="#62B192"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
