<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 FullDive
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none"
        android:id="@+id/nav_main_group">
        <item
            android:id="@+id/nav_pro"
            android:icon="@drawable/ic_pro"
            android:title="@string/str_pro_label_title" />
        <item
            android:id="@+id/nav_pro_activated"
            android:visible="false"
            tools:visible="true"
            android:icon="@drawable/ic_pro_activated"
            android:title="@string/str_pro_label_title" />
        <item
            android:id="@+id/nav_fast_Pref"
            android:icon="@drawable/ic_settings_fast"
            android:title="@string/drawer_menu_fastSettings" />
        <item
            android:id="@+id/nav_common_Pref"
            android:icon="@drawable/ic_settings_common"
            android:title="@string/drawer_menu_commonSettings" />
        <item
            android:id="@+id/nav_firewall"
            android:icon="@drawable/ic_firewall"
            android:title="@string/menu_firewall" />
        <item
            android:id="@+id/nav_DNS_Pref"
            android:icon="@drawable/ic_settings_dnscrypt"
            android:title="@string/drawer_menu_DNSSettings" />
        <item
            android:id="@+id/nav_Tor_Pref"
            android:icon="@drawable/ic_settings_tor"
            android:title="@string/drawer_menu_TorSettings" />
        <item
            android:id="@+id/nav_I2PD_Pref"
            android:icon="@drawable/ic_settings_itpd"
            android:title="@string/drawer_menu_I2PDSettings" />
    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/nav_donate_group">
        <item
            android:id="@+id/nav_Donate"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/drawer_menu_donate"
            android:visible="false"/>
        <item
            android:id="@+id/nav_Code"
            android:icon="@drawable/ic_enter_black_24dp"
            android:title="@string/enter_code_button"
            android:visible="false"/>
    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/nav_secondary_group">
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_save_black_24dp"
            android:title="@string/drawer_menu_backup" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/drawer_menu_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/drawer_menu_about" />
    </group>

</menu>
