<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of InviZible Pro.
  ~     InviZible Pro is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~     InviZible Pro is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~     You should have received a copy of the GNU General Public License
  ~     along with InviZible Pro.  If not, see <http://www.gnu.org/licenses/>.
  ~     Copyright 2019-2022 by Garmatin Oleksandr invizible.soft@gmail.com
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:id="@+id/pref_firewall_allow_internet_for_new_apps"
        android:defaultValue="false"
        android:key="NewAppsInternetAllowed"
        android:title="@string/pref_firewall_allow_internet_for_new_apps"
        android:summaryOn="@string/pref_firewall_allow_internet_for_new_apps_on_summ"
        android:summaryOff="@string/pref_firewall_allow_internet_for_new_apps_off_summ"/>
</androidx.preference.PreferenceScreen>
